src/tests/snapshots/nitrocli__tests__run__nitrocli_-h.snap
---
source: src/tests/run.rs
expression: s

---
nitrocli 0.4.1
A top-level command for nitrocli

USAGE:
    nitrocli [FLAGS] [OPTIONS] <SUBCOMMAND>

FLAGS:
    -h, --help        Prints help information
        --no-cache    Disables the cache for all secrets
    -V, --version     Prints version information
    -v, --verbose     Increases the log level (can be supplied multiple times)

OPTIONS:
    -m, --model <model>                        Selects the device model to connect to [possible values: librem, pro,
                                               storage]
        --serial-number <serial-numbers>...    Sets the serial number of the device to connect to. Can be set multiple
                                               times to allow multiple serial numbers
        --usb-path <usb-path>                  Sets the USB path of the device to connect to

SUBCOMMANDS:
    config         Reads or writes the device configuration
    encrypted      Interacts with the device's encrypted volume
    fill           Fills the SD card with random data
    help           Prints this message or the help of the given subcommand(s)
    hidden         Interacts with the device's hidden volume
    list           Lists the attached Nitrokey devices
    lock           Locks the connected Nitrokey device
    otp            Accesses one-time passwords
    pin            Manages the Nitrokey PINs
    pws            Accesses the password safe
    reset          Performs a factory reset
    status         Prints the status of the connected Nitrokey device
    unencrypted    Interacts with the device's unencrypted volume

