src/tests/snapshots/nitrocli__tests__run__nitrocli_config_--help.snap
---
source: src/tests/run.rs
expression: s

---
nitrocli-config 

Reads or writes the device configuration

USAGE:
    nitrocli config [OPTIONS] <SUBCOMMAND>

OPTIONS:
    -h, --help
            Print help information

    -m, --model <MODEL>
            Selects the device model to connect to [possible values: librem, pro, storage]

        --no-cache
            Disables the cache for all secrets

        --serial-number <SERIAL_NUMBERS>
            Sets the serial number of the device to connect to. Can be set multiple times to allow
            multiple serial numbers

        --usb-path <USB_PATH>
            Sets the USB path of the device to connect to

    -v, --verbose
            Increases the log level (can be supplied multiple times)

SUBCOMMANDS:
    get     Prints the Nitrokey configuration
    help    Print this message or the help of the given subcommand(s)
    set     Changes the Nitrokey configuration


