src/tests/snapshots/nitrocli__tests__run__nitrocli_encrypted_--help.snap
---
source: src/tests/run.rs
expression: s

---
nitrocli-encrypted 0.4.1
Interacts with the device's encrypted volume

USAGE:
    nitrocli encrypted [FLAGS] [OPTIONS] <SUBCOMMAND>

FLAGS:
    -h, --help        Prints help information
        --no-cache    Disables the cache for all secrets
    -V, --version     Prints version information
    -v, --verbose     Increases the log level (can be supplied multiple times)

OPTIONS:
    -m, --model <model>                        Selects the device model to connect to [possible values: librem, pro,
                                               storage]
        --serial-number <serial-numbers>...    Sets the serial number of the device to connect to. Can be set multiple
                                               times to allow multiple serial numbers
        --usb-path <usb-path>                  Sets the USB path of the device to connect to

SUBCOMMANDS:
    close    Closes the encrypted volume on a Nitrokey Storage
    help     Prints this message or the help of the given subcommand(s)
    open     Opens the encrypted volume on a Nitrokey Storage

